# FraudShield

./: .gitignore
backend/: Cargo.toml  Dockerfile
frontend/: package-lock.json  package.json
