[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.29", features = ["tokio-runtime"] }
cassandra-cpp = "0.16"
tensorflow = "0.20"
log = "0.4"
env_logger = "0.10"
