[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.37.0", features = ["tokio"] }
cassandra-cpp = "3.0.2"
tensorflow = "0.21.0"
log = "0.4"
env_logger = "0.11.6"
